--- a/src/components/MonopolyApp.css
+++ b/src/components/MonopolyApp.css
@@ -16,7 +16,9 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
+  overflow-y: auto;
 }
 
 .title {
@@ -37,6 +39,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow-y: auto;
+  padding-bottom: 20px;
 }
 
 .player-form {
